tests/miniJava/pos/000687_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( java ) { } else java = 0 ; } }
