tests/miniJava/neg/000595_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = class java { } int [ 0 ] ; } }
